--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/4.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Build.data.gz",
-        frameworkUrl: buildUrl + "/Build.framework.js.gz",
-        codeUrl: buildUrl + "/Build.wasm.gz",
+        dataUrl: buildUrl + "/4.data.gz",
+        frameworkUrl: buildUrl + "/4.framework.js.gz",
+        workerUrl: buildUrl + "/4.worker.js.gz",
+        codeUrl: buildUrl + "/4.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Obscura Phase 3",
